@@ -30,3 +30,11 @@ ALTER TABLE `identities`
 
 ALTER TABLE `messages`
     ADD INDEX `created_index` (`created`);
+
+-- Updates from version 0.2-beta (InnoDB only)
+
+ALTER TABLE `cache`
+    ADD CONSTRAINT `session_id_fk_cache` FOREIGN KEY (`session_id`)
+    REFERENCES `session`(`sess_id`)
+    ON DELETE CASCADE
+    ON UPDATE CASCADE;
